turtleart.lessons.turtleart.Main.Square.scala.error
Source:3: error: not found: value baisseBrosse
	baisseBrosse
        ^