turtleart.lessons.turtleart.Main.Square.scala.code
override def run() {
	baisseBrosse
	for(i <- 1 to 4){
		avance(200)
		gauche(90)
	}
}
